# fast_edit_distance

./: LICENSE  README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: build-macOS_ARM-wheel.yml  build_wheels.yml  publish-macOS-wheel.yml  publish-to-test-pypi.yml  python-build.yml
src/: edit_distance_c.c  edit_distance_cython.c  edit_distance_cython.pyx  fast_edit_distance.c  fast_edit_distance.pyx
test/: debuging.py  test.py
